# wrenchai

./: .gitignore  README.md  loop.sh
.claude/: settings.json
.claude/commands/: planify.md
.claude/hooks/: permission-review.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/admin/: pages.py
backend/app/api/: auth.py  deps.py  manuals.py  messages.py  router.py  sessions.py
backend/app/db/: database.py  models.py  seed.py
backend/app/schemas/: api.py
backend/app/services/: firebase_auth.py  pdf_processor.py  rag.py  session_manager.py
backend/tests/: conftest.py  test_admin.py  test_api_auth.py  test_api_messages.py  test_api_sessions.py  test_config.py  test_database.py  test_pdf_processor.py  test_rag.py  test_session_manager.py
manual-ingester/: .env.example  .gitignore  main.py  pyproject.toml
plans/: 1-backend-implementation.md  1-wrenchai-implementation.md  2-ios-implementation.md
web/: package-lock.json
web/app/: layout.tsx  page.tsx
web/app/ask/: page.tsx
web/app/guide/: page.tsx
web/components/: answer-display.tsx  question-form.tsx
web/lib/: api.ts
