[project]
name = "wrenchai-backend"
version = "0.1.0"
description = "WrenchAI - AI-powered car repair assistant backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "greenlet>=3.0.0",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "nicegui>=2.0.0",
    "firebase-admin>=6.0.0",
    "httpx>=0.27.0",
    "unsiloed-sdk>=0.1.7",
    "claude-agent-sdk>=0.1.48",
]

[project.scripts]
wrenchai = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
